--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,4 @@ if (APPLE)
 ENDIF (APPLE)
 target_link_libraries(sunglasses SOIL assimp freetype GLEW glfw3 sfml-audio libGL.so X11 Xrandr Xi Xinerama Xcursor Xxf86vm pthread dl)
 include_directories(${CMAKE_SOURCE_DIR}/Libraries ${CMAKE_SOURCE_DIR}/Libraries/Freetype ${CMAKE_SOURCE_DIR}/Libraries/SOIL)
-set(CMAKE_CXX_FLAGS "-std=c++11")
+set(CMAKE_CXX_FLAGS "-std=c++11 -g")
