--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -15,3 +15,5 @@ include_directories(${CMAKE_SOURCE_DIR}/Runtime/Core ${CMAKE_SOURCE_DIR}/Runtime
 
 add_definitions(-DLUA_COMPAT_5_2)
 set(CMAKE_CXX_FLAGS "-std=c++11 -g")
+
+install(DIRECTORY Runtime/ DESTINATION include/Sunglasses FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
