--- a/Sample Projects/Feature/CMakeLists.txt
+++ b/Sample Projects/Feature/CMakeLists.txt
@@ -2,15 +2,11 @@ project("Feature")
 
 cmake_minimum_required(VERSION 3.2)
 
-set(ENGINE_PATH ../../Engine/Runtime)
-
 file(GLOB SOURCES Source/*.cpp)
-file(GLOB_RECURSE ENGINE_SOURCE "${ENGINE_PATH}/*.cpp")
 
-add_executable(Feature-Executable ${SOURCES} ${ENGINE_SOURCE})
+add_executable(Feature-Executable ${SOURCES})
 
-include_directories(${CMAKE_SOURCE_DIR}/../../Engine/Runtime/Core ${CMAKE_SOURCE_DIR}/../../Engine/Runtime /usr/include/freetype2)
+include_directories(/usr/include/freetype2)
 
-add_definitions(-DLUA_COMPAT_5_2)
-target_link_libraries(Feature-Executable freetype SOIL GLEW libGL.so assimp sfml-audio glfw X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua)
+target_link_libraries(Feature-Executable sunglasses freetype SOIL GLEW libGL.so assimp sfml-audio glfw X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua)
 set(CMAKE_CXX_FLAGS "-std=c++11 -g")
