SunAction parameters can now be accessed using pointers
Removed the Test executable


Former-commit-id: 3619a49833f4f9ef75dd84089b9edba6453c9639

--- a/Engine/Tests/CMakeLists.txt
+++ b/Engine/Tests/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(${GTEST_INCLUDE_DIRS} ${GMOCK_INCLUDE_DIRS})
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 
-add_executable(Test ${SOURCES})
+add_executable(Test-Sunglasses ${SOURCES})
 include_directories(/usr/include/freetype2)
-target_link_libraries(Test sunglasses pthread gtest gmock)
+target_link_libraries(Test-Sunglasses sunglasses pthread gtest gmock)
 set(CMAKE_CXX_FLAGS "-std=c++11 -g")
