Implemented the SunScriptedNode and tested it thoroughly
Former-commit-id: 61e018d4fb8e6647c9426804c2fd3231c17452e3

--- a/Engine/Tests/CMakeLists.txt
+++ b/Engine/Tests/CMakeLists.txt
@@ -9,5 +9,6 @@ file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 add_executable(Test-Sunglasses ${SOURCES})
 include_directories(/usr/include/freetype2)
-target_link_libraries(Test-Sunglasses sunglasses pthread gtest gmock)
+add_definitions(-DLUA_COMPAT_5_2)
+target_link_libraries(Test-Sunglasses sunglasses pthread lua gtest gmock)
 set(CMAKE_CXX_FLAGS "-std=c++11 -g")
