Implemented SunLuaState, a wrapper for lua_State
Former-commit-id: 9fb0652eaee00bae6849ffa53046a3234265674e

--- a/Engine/Tests/CMakeLists.txt
+++ b/Engine/Tests/CMakeLists.txt
@@ -11,4 +11,4 @@ add_executable(Test-Sunglasses ${SOURCES})
 include_directories(/usr/include/freetype2)
 add_definitions(-DLUA_COMPAT_5_2)
 target_link_libraries(Test-Sunglasses sunglasses pthread lua gtest gmock)
-set(CMAKE_CXX_FLAGS "-std=c++11 -g")
+set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wpedantic -g")
