--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,5 @@ language: cpp
 compiler: gcc
 os: linux
 script:
-    - cmake ./Engine/Runtime -G "Unix Makefile"
+    - cmake ./Engine/Runtime -G "Unix Makefiles"
     - make
-    
