--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: cpp
 compiler: gcc
 os: linux
 script:
-    - cmake ./Engine/Runtime -G "Unix Makefiles"
+    - cmake ./Sample\ Projects/Feature -G "Unix Makefiles"
     - make
