--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ before_install:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
     - sudo apt-get update -qq
 install:
+    - sudo apt-get install -qq g++-4.8 libglm-dev libfreetype6-dev libsoil-dev libglew-dev libassimp-dev libsfml-dev xorg-dev libgl1-mesa-dev
     - wget https://github.com/glfw/glfw/archive/3.1.2.zip
     - unzip 3.1.2.zip -d glfw
     - cd glfw/glfw-3.1.2
     - cmake . -G "Unix Makefiles"
     - make install
-    - sudo apt-get install -qq g++-4.8 libglm-dev libfreetype6-dev libsoil-dev libglew-dev libassimp-dev libsfml-dev
     - export CXX="g++-4.8"
 script:
     - cmake ./Sample\ Projects/Feature -G "Unix Makefiles"
