--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,20 @@ install:
 
     - export CXX="g++-4.8"
 script:
-    - cmake ./Sample\ Projects/Feature -G "Unix Makefiles"
+    # Build Sunglasses (The Library)
+    - cd ./Engine/Runtime/
+    - cmake . -G "Unix Makefiles"
+    - sudo make install
+    - cd ./../../
+
+    # Build the Tests
+    - cd ./Engine/Tests/
+    - cmake . -G "Unix Makefiles"
+    - make
+    - ./Test-Sunglasses
+    - cd ./../..
+
+    # Build Feature
+    - cd ./Sample\ Projects/Feature
+    - cmake . -G "Unix Makefiles"
     - make
