Sunglasses now finds glfw properly
Former-commit-id: 6f16e7f8a6c978942ab23b7c9cb338f8e19c352b

--- a/Engine/Runtime/CMakeLists.txt
+++ b/Engine/Runtime/CMakeLists.txt
@@ -2,12 +2,15 @@ project("Sunglasses")
 
 cmake_minimum_required(VERSION 3.2)
 
+find_package(PkgConfig REQUIRED)
+pkg_search_module(GLFW REQUIRED glfw3)
+
 set(CMAKE_INSTALL_PREFIX /usr)
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 add_library(sunglasses SHARED ${SOURCES})
-target_link_libraries(sunglasses freetype SOIL GLEW libGL.so assimp sfml-audio glfw X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua)
+target_link_libraries(sunglasses freetype SOIL GLEW libGL.so assimp sfml-audio ${GLFW_LIBRARIES} X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua)
 install(TARGETS sunglasses LIBRARY DESTINATION lib)
 
 include_directories(/usr/include/freetype2)
