Downloading lua from ubuntu instead of building from source
Former-commit-id: 2e8242bbcb7fa75797e47b977c00e892d1b7d943

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     - sudo apt-get update -qq
 install:
     # Install dependencies from apt
-    - sudo apt-get install -qq g++-4.8 libfreetype6-dev libsoil-dev libglew-dev libassimp-dev libsfml-dev xorg-dev libgl1-mesa-dev libgtest-dev
+    - sudo apt-get install -qq g++-4.8 libfreetype6-dev libsoil-dev libglew-dev libassimp-dev libsfml-dev xorg-dev libgl1-mesa-dev libgtest-dev lua5.2 liblua5.2-dev
 
     # Install glfw (Trusty doesn't have glfw3)
     - wget https://github.com/glfw/glfw/archive/3.1.2.zip
@@ -25,14 +25,6 @@ install:
     - cmake . -G "Unix Makefiles"
     - sudo make install
     - cd ../..
-
-    # Install lua
-    - curl -R -O http://www.lua.org/ftp/lua-5.3.2.tar.gz
-    - tar zxf lua-5.3.2.tar.gz
-    - cd lua-5.3.2
-    - make linux
-    - sudo make install
-    - cd ..
 
 
     - export CXX="g++-4.8"
