--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     - sudo apt-get update -qq
 install:
     # Install dependencies from apt
-    - sudo apt-get install -qq g++-4.8 libfreetype6-dev libsoil-dev libglew-dev libassimp-dev libsfml-dev xorg-dev libgl1-mesa-dev libgtest0 libgtest-dev
+    - sudo apt-get install -qq g++-4.8 libfreetype6-dev libsoil-dev libglew-dev libassimp-dev libsfml-dev xorg-dev libgl1-mesa-dev
 
     # Install glfw (Trusty doesn't have glfw3)
     - wget https://github.com/glfw/glfw/archive/3.1.2.zip
@@ -41,6 +41,13 @@ install:
     - sudo make install
     - cd ..
 
+    # Install gtest
+    - wget https://github.com/google/googletest/archive/release-1.7.0.zip
+    - unzip -qq release-1.7.0.zip -d gtest
+    - cd gtest/googletest-release-1.7.0
+    - cmake . -G "Unix Makefiles"
+    - sudo make install
+    - cd ../..
 
     - export CXX="g++-4.8"
 script:
