--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ install:
     - wget https://github.com/google/googletest/archive/release-1.7.0.zip
     - unzip -qq release-1.7.0.zip -d gtest
     - cd gtest/googletest-release-1.7.0
-    - cmake . -G "Unix Makefiles"
+    - cmake . -G "Unix Makefiles" -DBUILD_SHARED_LIBS=ON
     - make
     - sudo cp -a include/gtest /usr/include
     - sudo cp -a libgtest_main.so libgtest.so /usr/lib/
