--- a/.travis.yml
+++ b/.travis.yml
@@ -42,14 +42,11 @@ install:
     - cd ..
 
     # Install gtest
-    - wget https://github.com/google/googletest/archive/release-1.7.0.zip
-    - unzip -qq release-1.7.0.zip -d gtest
-    - cd gtest/googletest-release-1.7.0
+    - wget https://github.com/google/googletest/archive/master.zip
+    - unzip -qq master.zip -d gtest
+    - cd gtest/googletest-master
     - cmake . -G "Unix Makefiles" -DBUILD_SHARED_LIBS=ON
-    - make
-    - sudo cp -a include/gtest /usr/include
-    - sudo cp -a libgtest_main.so libgtest.so /usr/lib/
-    - cd ../..
+    - sudo make install
 
     - export CXX="g++-4.8"
 script:
