--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     - sudo apt-get update -qq
 install:
     # Install dependencies from apt
-    - sudo apt-get install -qq g++-4.8 libfreetype6-dev libsoil-dev libglew-dev libassimp-dev libsfml-dev xorg-dev libgl1-mesa-dev
+    - sudo apt-get install -qq gcc libfreetype6-dev libsoil-dev libglew-dev libassimp-dev libsfml-dev xorg-dev libgl1-mesa-dev
 
     # Install glfw (Trusty doesn't have glfw3)
     - wget https://github.com/glfw/glfw/archive/3.1.2.zip
@@ -41,7 +41,7 @@ install:
     - sudo make install
     - cd ..
 
-    - export CXX="g++-4.8"
+    - export CXX="g++"
 script:
     # Build Sunglasses (The Library)
     - cd Engine/Runtime/
