Added gmock as a dependency
Former-commit-id: b5e604787a4c5bbf62bab17edc9836202b3f1bda

--- a/Engine/Tests/CMakeLists.txt
+++ b/Engine/Tests/CMakeLists.txt
@@ -43,4 +43,5 @@ add_executable(Test-Sunglasses ${SOURCES})
 include_directories(/usr/include/freetype2)
 target_link_libraries(Test-Sunglasses sunglasses pthread lua ${GTEST_LIBRARY})
 add_dependencies(Test-Sunglasses gtest)
+add_dependencies(Test-Sunglasses gmock)
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wpedantic -g")
