Fixed an error in the Travis build due to an old version of Assimp in the Ubuntu repositories

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
     - sudo apt-get update -qq
 install:
     # Install dependencies from apt
-    - sudo apt-get install -qq libfreetype6-dev libsoil-dev libglew-dev libassimp-dev libsfml-dev xorg-dev libgl1-mesa-dev
+    - sudo apt-get install -qq libfreetype6-dev libsoil-dev libglew-dev libsfml-dev xorg-dev libgl1-mesa-dev
 
     # Install glfw (Trusty doesn't have glfw3)
     - wget https://github.com/glfw/glfw/archive/3.1.2.zip
@@ -24,6 +24,14 @@ install:
     - wget https://github.com/g-truc/glm/archive/0.9.7.3.zip
     - unzip -qq 0.9.7.3.zip -d glm
     - cd glm/glm-0.9.7.3
+    - cmake . -G "Unix Makefiles"
+    - sudo make install
+    - cd ../..
+
+    # Install assimp (Trusty's version is too old)
+    - wget https://github.com/assimp/assimp/archive/v3.2.zip
+    - unzip -qq v3.2.zip -d assimp
+    - cd assimp/assimp-3.2
     - cmake . -G "Unix Makefiles"
     - sudo make install
     - cd ../..
