--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 include(ExternalProject)
 
 
+find_package(PkgConfig REQUIRED)
+pkg_search_module(GLFW REQUIRED glfw3)
 
 
 externalproject_add(gtest
@@ -18,8 +20,6 @@ include_directories("${source_dir}/include")
 set(GTEST_LIBRARY "${binary_dir}/libgtest.a")
 
 
-
-
 externalproject_add(gmock
     URL https://googlemock.googlecode.com/files/gmock-1.7.0.zip
     PREFIX ${CMAKE_CURRENT_BINARY_DIR}/gmock
@@ -34,15 +34,24 @@ include_directories("${source_dir}/include")
 set(GMOCK_LIBRARY "${binary_dir}/libgmock.a")
 
 
-
-
 project(Test-Sunglasses)
 
-file(GLOB_RECURSE SOURCES "src/*.cpp")
+set(SOURCES
+    main.cpp
+    test_SunAction.cpp
+    test_SunBase.cpp
+    test_SunLuaPrimitives.cpp
+    test_SunLuaTypeRegistrar.cpp
+    test_SunResourceManager.cpp
+    test_SunResourceService.cpp
+    test_SunScript.cpp
+)
+
+add_test(all Test-Sunglasses)
 
 add_executable(Test-Sunglasses ${SOURCES})
 include_directories(/usr/include/freetype2)
-target_link_libraries(Test-Sunglasses sunglasses lua ${GTEST_LIBRARY} ${GMOCK_LIBRARY} pthread)
+target_link_libraries(Test-Sunglasses sunglasses freetype SOIL GLEW libGL.so assimp sfml-audio ${GLFW_LIBRARIES} X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua ${GTEST_LIBRARY} ${GMOCK_LIBRARY} pthread)
 add_dependencies(Test-Sunglasses gtest)
 add_dependencies(Test-Sunglasses gmock)
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wpedantic -g")
