Added SunShadowMapRenderNode.cpp to CMake

--- a/src/Extra/CMakeLists.txt
+++ b/src/Extra/CMakeLists.txt
@@ -3,6 +3,7 @@ add_sources(
     SunLuaTypeDefinitions.cpp
     SunPointLight.cpp
     SunShadowDirectionalLight.cpp
+    SunShadowMapRenderNode.cpp
     SunShadowPointLight.cpp
 )
 
