--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ addons:
             - gcc-5
 install:
     # Install dependencies from apt
-    - sudo apt-get install -qq libfreetype6-dev libsoil-dev libglew-dev libsfml-dev xorg-dev libgl1-mesa-dev libtclap-dev gcc-6
+    - sudo apt-get install -qq libfreetype6-dev libsoil-dev libglew-dev libsfml-dev xorg-dev libgl1-mesa-dev libtclap-dev
 
     # Install glfw (Trusty doesn't have glfw3)
     - wget https://github.com/glfw/glfw/archive/3.1.2.zip
