--- a/Sample Projects/Feature/CMakeLists.txt
+++ b/Sample Projects/Feature/CMakeLists.txt
@@ -9,5 +9,5 @@ add_executable(Feature-Executable Source/FeatureGame.cpp Source/FeatureRenderer.
 
 include_directories(/usr/include/freetype2)
 
-target_link_libraries(Feature-Executable sunglasses freetype SOIL GLEW libGL.so assimp sfml-audio ${GLFW_LIBRARIES} X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua)
+target_link_libraries(Feature-Executable sunglasses freetype SOIL GLEW libGL.so assimp openal ${GLFW_LIBRARIES} X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua)
 set(CMAKE_CXX_FLAGS "-std=c++14 -g")
