--- a/Sample Projects/Voxel/CMakeLists.txt
+++ b/Sample Projects/Voxel/CMakeLists.txt
@@ -10,5 +10,5 @@ add_executable(Voxel-Executable src/main.cpp src/Game.cpp src/MenuScene.cpp src/
 
 include_directories(/usr/include/freetype2)
 
-target_link_libraries(Voxel-Executable sunglasses freetype SOIL GLEW libGL.so assimp sfml-audio ${GLFW_LIBRARIES} X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua)
+target_link_libraries(Voxel-Executable sunglasses freetype SOIL GLEW libGL.so assimp openal ${GLFW_LIBRARIES} X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua)
 set(CMAKE_CXX_FLAGS "-std=c++14 -g")
