--- a/src/Audio/CMakeLists.txt
+++ b/src/Audio/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_sources(
+    SunAudioBufferResource.cpp
     SunAudioDeviceManager.cpp
     SunAudioListener.cpp
+    SunAudioSource.cpp
 )
 
 add_sources_to_parent() 
