--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ addons:
             - gcc-5
 install:
     # Install dependencies from apt
-    - sudo apt-get install -qq libfreetype6-dev libsoil-dev libglew-dev libsfml-dev xorg-dev libgl1-mesa-dev libtclap-dev libopenal-dev
+    - sudo apt-get install -qq libfreetype6-dev libsoil-dev libglew-dev xorg-dev libgl1-mesa-dev libtclap-dev libopenal-dev libalut-dev
 
     - if [ "$CXX" = "g++" ]; then export CXX="g++-5" CC="gcc-5"; fi
     - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
