Added the animation directory to graphics

--- a/src/Graphics/CMakeLists.txt
+++ b/src/Graphics/CMakeLists.txt
@@ -10,6 +10,7 @@ add_sources(
     SunWindowManager.cpp
 )
 
+add_subdirectory(Animation)
 add_subdirectory(Loaders)
 add_subdirectory(RenderNodes)
 
