--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_sources(
     SunGUILabel.cpp
+    SunGUIPath.cpp
+    SunGUIRendering.cpp
     SunGUIView.cpp
+    SunGUIViewController.cpp
     SunGUIWindow.cpp
 ) 
 
