--- a/Sample Projects/GUI/CMakeLists.txt
+++ b/Sample Projects/GUI/CMakeLists.txt
@@ -10,7 +10,8 @@ add_executable(GUI-Executable
     src/GUIGame.cpp
     src/GUIMainMenu.cpp)
 
-include_directories(/usr/include/freetype2)
+include_directories(/usr/include/freetype2
+    ../../src/sunglasses/include/)
 
 target_link_libraries(GUI-Executable sunglasses freetype SOIL GLEW libGL.so assimp openal alut ${GLFW_LIBRARIES} X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua)
 set(CMAKE_CXX_FLAGS "-std=c++14 -g")
