--- a/Sample Projects/GUI/CMakeLists.txt
+++ b/Sample Projects/GUI/CMakeLists.txt
@@ -7,11 +7,10 @@ pkg_search_module(GLFW REQUIRED glfw3)
 
 add_executable(GUI-Executable
     src/main.cpp
-    src/GUIGame.cpp
     src/GUIMainMenu.cpp)
 
 include_directories(/usr/include/freetype2
     ../../src/sunglasses/include/)
 
-target_link_libraries(GUI-Executable sunglasses freetype SOIL GLEW libGL.so assimp openal alut ${GLFW_LIBRARIES} X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua)
+target_link_libraries(GUI-Executable sunglasses freetype SOIL GLEW GL assimp openal alut ${GLFW_LIBRARIES} X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua)
 set(CMAKE_CXX_FLAGS "-std=c++14 -g")
