A Drawable API used for controlling GUI drawing
Only a subclass for drawing a solid color exists, but
a subclass for drawing images, bordered rectangles, etc.
will be added later.

--- a/src/sunglasses/GUI/CMakeLists.txt
+++ b/src/sunglasses/GUI/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_sources(
     SunGUI.cpp
     SunGUIButton.cpp
+    SunGUIDrawable.cpp
     SunGUILabel.cpp
     SunGUIRenderer.cpp
     SunGUIView.cpp
