Fixed an erroring include and adjusted the samples
Temporarily turned off the Feature and Voxel sample projects
because they did not compile

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.2)
 
-add_subdirectory(Feature)
+#add_subdirectory(Feature)
 add_subdirectory(GUI)
-add_subdirectory(Voxel)
+#add_subdirectory(Voxel)
