--- a/samples/Feature/CMakeLists.txt
+++ b/samples/Feature/CMakeLists.txt
@@ -8,7 +8,7 @@ pkg_search_module(GLFW REQUIRED glfw3)
 add_executable(Feature-Executable Source/FeatureGame.cpp Source/FeatureRenderer.cpp Source/FeatureScene.cpp Source/main.cpp)
 
 include_directories(/usr/include/freetype2
-    ../../src/sunglasses/include/)
+    "../../sunglasses/include/")
 
 target_link_libraries(Feature-Executable sunglasses freetype SOIL GLEW libGL.so assimp openal alut ${GLFW_LIBRARIES} X11 Xxf86vm pthread dl Xrandr Xinerama Xi Xcursor lua)
 set(CMAKE_CXX_FLAGS "-std=c++14 -g")
