--- a/sunglasses/src/Graphics/Loaders/CMakeLists.txt
+++ b/sunglasses/src/Graphics/Loaders/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_sources(
-    SunMaterialResource.cpp
-    SunMeshResource.cpp
-    SunModelResource.cpp
-    SunTextureResource.cpp
+    MaterialResource.cpp
+    MeshResource.cpp
+    ModelResource.cpp
+    TextureResource.cpp
 )
 
 add_sources_to_parent() 
