--- a/sunglasses/src/Scripting/CMakeLists.txt
+++ b/sunglasses/src/Scripting/CMakeLists.txt
@@ -1,11 +1,11 @@
 add_sources(
-    SunGlobalScriptingEnvironment.cpp
-    SunLuaCFunction.cpp
-    SunLuaPrimitives.cpp
-    SunLuaRawCFunction.cpp
-    SunLuaTypeRegistrar.cpp
-    SunLuaValue.cpp
-    SunScript.cpp
+    GlobalScriptingEnvironment.cpp
+    LuaCFunction.cpp
+    LuaPrimitives.cpp
+    LuaRawCFunction.cpp
+    LuaTypeRegistrar.cpp
+    LuaValue.cpp
+    Script.cpp
 )
 
 add_sources_to_parent()
